# T2_SO

./: CMakeLists.txt  README.md
Example/: BarberMain  BarberShop.cc  BarberShop.h  makefile  makefile~
programa/: Container.cpp  Container.h  README  Rail.cpp  Rail.h  Train.cpp  Train.h  TrainStation.cpp  TrainStation.cpp~  TrainStation.h  TrainStation.h~  TrainStationMain  TrainStationMain.cpp  TrainStationMain.cpp~  main.cpp  makefile  makefile~
